# course_work_1

./: .env.example  README.md  config.py  main.py  pyproject.toml
logs/: report_2024-09-24_12-49-45.json
src/: exp.py  report.py  services.py  utils.py  views.py  xlsx_reader.py
tests/: test_report.py  test_services.py  test_stock_rates.py  test_utils.py  test_views.py  test_xlsx_reader.py
